# 2024sp-420-PythonB

./: .coverage  .gitignore  LICENSE  README.md  __main__.py  build.bat  build.py  build.sh  classadd.py  controller.py  guiV1.py  main.py  pyproject.toml  save.py  test.sh  uml.py
.github/workflows/: python-app.yml
Controllers/: CLIcontroller.py  controller.py  guicontroller.py  smart_input.py
Models/: UML_Class.py  UML_Diagram.py  UML_Method.py  UML_Named_Object.py  UML_Param.py  UML_Relation.py  addclass.py  attribute.py  classTest.py  classadd.py  controller.py  diagram.py  errorHandler.py  relationship.py  saveload.py  uml_class.py  uml_diagram.py  uml_field.py  uml_method.py  uml_param.py  uml_relation.py
Models/Test/: classTest.py
Test/: attributeTest.py  classTest.py  class_test.py  diagram_test.py  fields_test.py  method_test.py  param_test.py  relation_test.py  relationshipTest.py  saveloadTest.py  test_classadd.py  test_fields.py  test_methods.py  test_param.py  test_parameters.py  test_relationship.py
Views/: cli.py  guiV1.py
saves/: .gitignore  demo_.json
schema/: umlSchema.json
src/: __init__.py
src/Controllers/: __init__.py  cli_controller.py  controller.py  gui_controller.py  old_controller.py
src/Models/: __init__.py  attribute.py  classadd.py  errorHandler.py  error_handler.py  uml_class.py  uml_diagram.py  uml_field.py  uml_image.py  uml_list.py  uml_method.py  uml_named_object.py  uml_param.py  uml_parser.py  uml_relation.py  uml_save_load.py  uml_undo_redo.py  uml_visitor.py
src/Views/: __init__.py  cli_view.py  gui_view.py  (+2 more)
(+11 files in other folders)
